envoy-golden.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                http_filters:
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: dummy
                        timeout: 10s
                      failure_mode_allow: true
                      processing_mode:
                        # skip means disabled
                        request_header_mode: SKIP
                        response_header_mode: SKIP
                      message_timeout: 1000s
                      metadata_options:
                        receiving_namespaces:
                          untyped: ["envoy.lb"]
                        forwarding_namespaces:
                          untyped: ["envoy.lb"]
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: my_virtual_host
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/ext"
                          route:
                            cluster: my_service
                          typed_per_filter_config:
                            envoy.filters.http.ext_proc:  
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExtProcPerRoute
                              overrides:
                                grpc_service:
                                  envoy_grpc:
                                    cluster_name: ext_proc_cluster
                                processing_mode:
                                  request_header_mode: SEND
                                  response_header_mode: SKIP
                        - match:
                            prefix: "/"
                          route:
                            cluster: my_service

  clusters:
    - name: my_service
      type: STATIC
      lb_policy: LEAST_REQUEST
      lb_subset_config:
        fallback_policy: ANY_ENDPOINT
        subset_selectors:
          - keys: ["x-target-ip"]
      load_assignment:
        cluster_name: my_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
                metadata:
                  filter_metadata:
                    envoy.lb:
                      x-target-ip: "10.0.0.1:8080"
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
                metadata:
                  filter_metadata:
                    envoy.lb:
                      x-target-ip: "10.0.0.2:8081"
    - name: ext_proc_cluster
      type: STRICT_DNS
      http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_proc_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 50051
